--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <h2>Header btw</h2>
 <body>
-<p> This is a paragraph for now. <br> Down below will be an image. </p>
+<p> This is a paragraph for now. <br> Down below will be an image of a recently retired soccer player named Mezut Ozil. </p>
 <img src="ozil.jpeg" width="50" height="50">
 </body>
 </html>
